# celery_redis_statedb

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  example_app.py  pyproject.toml
celery_redis_statedb/: __init__.py  bootstep.py  migration.py  state.py
docs/: CELERY_SHELVE_FORMAT.md
examples/: README.md
examples/django-celery/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  QUICKSTART.md  README.md  docker-compose.debug.yml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  test_state_persistence.sh
examples/django-celery/myproject/: __init__.py  celery.py  settings.py  urls.py  wsgi.py
examples/django-celery/tasks/: __init__.py  admin.py  apps.py  models.py  tasks.py  urls.py  views.py
tests/: __init__.py  conftest.py  test_bootstep.py  test_install.py  test_migration.py  test_state.py
