[project]
name = "celery-redis-statedb"
version = "0.1.0"
description = "Redis-based statedb persistence for Celery workers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "celery>=5.0.0",
    "redis>=4.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.5",
    "mypy>=1.0.0",
    "ty>=0.0.1a26",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "fakeredis>=2.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "celery.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "kombu.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=celery_redis_statedb --cov-report=term-missing"
