[project]
name = "celery-redis-statedb"
version = "0.1.0"
description = "Redis-based statedb persistence for Celery workers"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Slothy Rules", email = "slothyrulez@gmail.com"}
]
license = "BSD-3-Clause"
license-files = ["LICENSE"]
keywords = ["celery", "redis", "statedb", "persistence", "workers", "distributed"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Topic :: Database",
    "Framework :: Celery",
    "Operating System :: OS Independent",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

dependencies = [
    "celery>=5.0.0",
    "redis>=4.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.5",
    "mypy>=1.0.0",
    "ty>=0.0.1a26",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "fakeredis>=2.10.0",
]

[project.urls]
Homepage = "https://github.com/slothyrulez/celery_redis_statedb"
Repository = "https://github.com/slothyrulez/celery_redis_statedb"
Issues = "https://github.com/slothyrulez/celery_redis_statedb/issues"
Documentation = "https://github.com/slothyrulez/celery_redis_statedb#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["celery_redis_statedb"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "celery.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "kombu.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=celery_redis_statedb --cov-report=term-missing"
