[project]
name = "django-celery-example"
version = "0.1.0"
description = "Example Django application with Celery and Redis StateDB"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Django>=4.2,<5.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "psycopg2-binary>=2.9.0",
    "celery-redis-statedb",
]

# Local development: celery-redis-statedb is not yet published to PyPI
# This references the parent directory for local development
[tool.uv.sources]
celery-redis-statedb = { path = "../..", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
